fix: PEP-8 Error: Line too long

--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ ul {
 }
 header {
     background-color: #e1e1e1;
+    box-shadow: -1px 0 10px 1px rgba(0, 0, 0, 0.3);
 }
 
 ul {
